# Roman_calculator

./: README.md
roman_calculator/: Makefile  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
roman_calculator/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
roman_calculator/src/: Makefile  Makefile.am  Makefile.in  calculate.c  calculate.h  main.c
roman_calculator/src/.deps/: calculate.Plo  main.Po
roman_calculator/tests/: Makefile  Makefile.am  Makefile.in  check_calculate.c
roman_calculator/tests/.deps/: check_calculate-check_calculate.Po
